# plato

./: .gitignore  Cargo.toml  README.md  download.sh  lto.sh
contrib/: Settings-sample.toml
crates/core/: Cargo.toml
crates/core/src/: context.rs  emulator.rs  helpers.rs  lib.rs  library.rs  metadata.rs  translate.rs
crates/core/src/document/: djvu.rs  mod.rs  pdf.rs
crates/core/src/font/: mod.rs
crates/core/src/settings/: mod.rs
crates/core/src/view/: button.rs  clock.rs  common.rs  frontlight.rs  icon.rs  input_field.rs  intermission.rs  label.rs  labeled_icon.rs  menu.rs  menu_entry.rs  mod.rs  (+4 more)
crates/emulator/src/: main.rs
crates/fetcher/: Cargo.toml
crates/plato/src/: app.rs
css/: css-tweaks.css  dictionary.css  html.css  translate.css  wikipedia.css
doc/: BUILD.md  CSS_TWEAKS.md  GUIDE.md  HOOKS.md  MANUAL.md  THEMES.md
fonts/: README.md
src/: app.rs  emulator.rs  helpers.rs  importer.rs  main.rs  metadata.rs  translate.rs  wikipedia.rs
src/document/: mod.rs
src/document/epub/: mod.rs
src/document/html/: engine.rs
src/font/: mod.rs
src/frontlight/: mod.rs
src/settings/: mod.rs
src/view/: button.rs  common.rs  frontlight.rs  icon.rs  intermission.rs  label.rs  labeled_icon.rs  menu.rs  menu_entry.rs  mod.rs  page_label.rs  slider.rs  theme.rs
src/view/dictionary/: mod.rs
src/view/home/: book.rs  library_label.rs  mod.rs  shelf.rs
src/view/reader/: bottom_bar.rs  chapter_label.rs  mod.rs  results_label.rs  scrubber.rs  tool_bar.rs
src/view/translate/: bottom_bar.rs  mod.rs
src/view/wikipedia/: bottom_bar.rs  mod.rs
(+21 files in other folders)
