[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/plato",
  "crates/emulator",
  "crates/importer",
  "crates/fetcher",
]

[profile.release-minsized]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
strip = true

[profile.release-lto]
inherits = "release"
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"
overflow-checks = false